[package]
name = "open-btime"
version = "0.1.0"
description = "Open source reimplemenation of the bitme native library seen in the Obsidian app originally written in C++"
authors = ["matu6968"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
